--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TaskTimerAppKK"
         tools:targetApi="31">
+
         <activity
             android:name=".AddTaskActivity"
             android:exported="false">
@@ -22,6 +23,13 @@
         </activity>
         <activity
             android:name=".TasksActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".SignUp"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
