-Add Room database - Add functionality to add button in the activity  task(or Task Activity) - move simple functionality of timer from click listener to adapter (The  functionality need to be combleted)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
+    id 'kotlin-kapt'
+
 }
 
 android {
@@ -48,5 +50,7 @@ dependencies {
     // Room components
     implementation "androidx.room:room-runtime:2.4.3"
     implementation "androidx.room:room-ktx:2.4.3"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
+    kapt  "androidx.room:room-compiler:2.4.3"
+
 }
